add game restart
